style: format [DHIS2-14887]